--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,8 +7,13 @@
         xmlns:local="clr-namespace:Exercise_Tracker"
         mc:Ignorable="d"
         Title="Feed" Height="450" Width="400">
+    <Window.Resources>
+        <CollectionViewSource x:Name="cvs" x:Key="cvs" Source="{Binding Activities}"/>
+    </Window.Resources>
     <Grid>
-        <ListView x:Name="lvActivities" Height="164" VerticalAlignment="Top" SelectionChanged="lvActivities_SelectionChanged" GridViewColumnHeader.Click="GridViewColumnHeaderClickedHandler" Margin="0,0,0,0" ItemsSource="{Binding Path=Activities}">
+        <Grid.Resources>
+        </Grid.Resources>
+        <ListView x:Name="lvActivities" Height="164" VerticalAlignment="Top" SelectionChanged="lvActivities_SelectionChanged" GridViewColumnHeader.Click="GridViewColumnHeaderClickedHandler" Margin="0,0,0,0" ItemsSource="{Binding Source={StaticResource cvs}}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Path=ActivityDate}" Width="Auto"/>
@@ -18,6 +23,7 @@
                 </GridView>
             </ListView.View>
         </ListView>
+
         <Button x:Name="btnUpdateActivity" Content="Edit" HorizontalAlignment="Left" Margin="109,283,0,0" VerticalAlignment="Top" Width="83" Click="btnUpdateActivity_Click" Height="33" RenderTransformOrigin="0.233,0.576"/>
         <Button x:Name="btnAddActivity" Content="New Activity" HorizontalAlignment="Left" Margin="10,283,0,0" VerticalAlignment="Top" Width="82" Click="btnAddActivity_Click" Height="33"/>
         <Button x:Name="Refresh" Content="Refresh List" HorizontalAlignment="Left" Margin="207,283,0,0" VerticalAlignment="Top" Width="82" Click="btnRefreshList_Click" Height="33"/>
@@ -25,7 +31,7 @@
         <Label Content="Start Date" Margin="15,388,311,-15" />
         <DatePicker Name="dpStartDate" HorizontalAlignment="Left" Margin="15,355,0,0" VerticalAlignment="Top" Height="33" SelectedDateChanged="dpStartDate_SelectedDateChanged"/>
         <DatePicker Name="dpEndDate" HorizontalAlignment="Left" Margin="139,355,0,0" VerticalAlignment="Top" Height="33" SelectedDateChanged="dpEndDate_SelectedDateChanged"/>
-        <Button Content="Search Dates" HorizontalAlignment="Left" Margin="265,355,0,0" VerticalAlignment="Top" Width="107" Height="33" Click="btnSearchDates_Click"/>
+        <Button x:Name="btnFilterDates" Content="Search Dates" HorizontalAlignment="Left" Margin="265,355,0,0" VerticalAlignment="Top" Width="107" Height="33" Click="btnSearchDates_Click"/>
         <Label Content="End Date" Margin="139,388,187,-15" />
         <Label Content="Total Time:" HorizontalAlignment="Left" Margin="10,190,0,0" VerticalAlignment="Top"/>
         <Label Content="Average Time:" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.132,-0.115"/>
@@ -35,12 +41,14 @@
         <TextBox x:Name="txtAvgTime" HorizontalAlignment="Left" Height="23" Margin="104,224,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="65"/>
         <TextBox x:Name="txtTotalDist" HorizontalAlignment="Left" Height="23" Margin="317,193,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="65"/>
         <TextBox x:Name="txtAvgDist" HorizontalAlignment="Left" Height="23" Margin="317,224,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="65"/>
-        <ComboBox x:Name="cboActivityType" HorizontalAlignment="Left" Margin="300,283,0,0" VerticalAlignment="Top" Width="82" Height="33" DropDownClosed="cboActivityType_DropDownClosed">
-            <ComboBoxItem Content="Running"/>
-            <ComboBoxItem Content="Walking"/>
-            <ComboBoxItem Content="Swimming"/>
-            <ComboBoxItem Content="Cycling"/>
-            <ComboBoxItem Content="Yoga"/>
+        <ComboBox x:Name="cboFilterType" HorizontalAlignment="Left" Margin="300,283,0,0" VerticalAlignment="Top" Width="82" Height="33" >
+            
+            <ComboBoxItem Content="Select All" IsSelected="True"/>
+            <ComboBoxItem Content="Running" IsSelected="True"/>
+            <ComboBoxItem Content="Walking" IsSelected="True"/>
+            <ComboBoxItem Content="Swimming" IsSelected="True"/>
+            <ComboBoxItem Content="Cycling" IsSelected="True"/>
+            <ComboBoxItem Content="Yoga" IsSelected="True"/>
         </ComboBox>
 
     </Grid>
